[package]

name = "containerof"
version = "0.2.0"
authors = ["Aidan Cully <github@aidan.users.panix.com>"]
license = "MIT"
repository = "https://github.com/aidancully/containerof"
readme = "README.md"
description = """
Provides Rust implementations of the C-language offsetof() and containerof()
macros.
"""
