[package]

name = "containerof"
version = "0.3.0"
authors = ["Aidan Cully <github@aidan.users.panix.com>"]
license = "MIT"
repository = "https://github.com/aidancully/containerof"
documentation = "https://aidancully.github.io/src/containerof/containerof/"
readme = "README.md"
description = """
Macros and traits facilitating the use of intrusive structures in Rust.
"""

[build-dependencies]
rustc_version = "0.3"
